compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LBRACKET
    RBRACKET

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> expression_statement
Rule 5     statement -> assignment_statement
Rule 6     statement -> if_statement
Rule 7     statement -> while_statement
Rule 8     statement -> for_statement
Rule 9     statement -> function_declaration
Rule 10    statement -> return_statement
Rule 11    statement -> break_statement
Rule 12    statement -> continue_statement
Rule 13    statement -> block
Rule 14    expression_statement -> expression SEMI
Rule 15    assignment_statement -> IDENTIFIER EQUALS expression SEMI
Rule 16    block -> LBRACE statement_list RBRACE
Rule 17    block -> LBRACE RBRACE
Rule 18    if_statement -> IF LPAREN expression RPAREN statement
Rule 19    if_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 20    while_statement -> WHILE LPAREN expression RPAREN statement
Rule 21    for_statement -> FOR LPAREN assignment_or_empty SEMI expression_or_empty SEMI expression_or_empty RPAREN statement
Rule 22    assignment_or_empty -> IDENTIFIER EQUALS expression
Rule 23    assignment_or_empty -> empty
Rule 24    expression_or_empty -> expression
Rule 25    expression_or_empty -> empty
Rule 26    function_declaration -> FUNC IDENTIFIER LPAREN parameter_list RPAREN block
Rule 27    function_declaration -> FUNC IDENTIFIER LPAREN RPAREN block
Rule 28    parameter_list -> parameter_list COMMA IDENTIFIER
Rule 29    parameter_list -> IDENTIFIER
Rule 30    return_statement -> RETURN expression SEMI
Rule 31    return_statement -> RETURN SEMI
Rule 32    break_statement -> BREAK SEMI
Rule 33    continue_statement -> CONTINUE SEMI
Rule 34    expression -> expression OR expression
Rule 35    expression -> expression AND expression
Rule 36    expression -> expression EQ expression
Rule 37    expression -> expression NE expression
Rule 38    expression -> expression LT expression
Rule 39    expression -> expression GT expression
Rule 40    expression -> expression LE expression
Rule 41    expression -> expression GE expression
Rule 42    expression -> expression PLUS expression
Rule 43    expression -> expression MINUS expression
Rule 44    expression -> expression TIMES expression
Rule 45    expression -> expression DIVIDE expression
Rule 46    expression -> expression MOD expression
Rule 47    expression -> NOT expression
Rule 48    expression -> MINUS expression
Rule 49    expression -> LPAREN expression RPAREN
Rule 50    expression -> NUMBER
Rule 51    expression -> STRING
Rule 52    expression -> IDENTIFIER
Rule 53    expression -> IDENTIFIER LPAREN argument_list RPAREN
Rule 54    expression -> IDENTIFIER LPAREN RPAREN
Rule 55    argument_list -> argument_list COMMA expression
Rule 56    argument_list -> expression
Rule 57    empty -> <empty>

Terminals, with rules where they appear

AND                  : 35
BREAK                : 32
COMMA                : 28 55
CONTINUE             : 33
DIVIDE               : 45
ELSE                 : 19
EQ                   : 36
EQUALS               : 15 22
FOR                  : 21
FUNC                 : 26 27
GE                   : 41
GT                   : 39
IDENTIFIER           : 15 22 26 27 28 29 52 53 54
IF                   : 18 19
LBRACE               : 16 17
LBRACKET             : 
LE                   : 40
LPAREN               : 18 19 20 21 26 27 49 53 54
LT                   : 38
MINUS                : 43 48
MOD                  : 46
NE                   : 37
NOT                  : 47
NUMBER               : 50
OR                   : 34
PLUS                 : 42
RBRACE               : 16 17
RBRACKET             : 
RETURN               : 30 31
RPAREN               : 18 19 20 21 26 27 49 53 54
SEMI                 : 14 15 21 21 30 31 32 33
STRING               : 51
TIMES                : 44
WHILE                : 20
error                : 

Nonterminals, with rules where they appear

argument_list        : 53 55
assignment_or_empty  : 21
assignment_statement : 5
block                : 13 26 27
break_statement      : 11
continue_statement   : 12
empty                : 23 25
expression           : 14 15 18 19 20 22 24 30 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 48 49 55 56
expression_or_empty  : 21 21
expression_statement : 4
for_statement        : 8
function_declaration : 9
if_statement         : 6
parameter_list       : 26 28
program              : 0
return_statement     : 10
statement            : 2 3 18 19 19 20 21
statement_list       : 1 2 16
while_statement      : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . expression_statement
    (5) statement -> . assignment_statement
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . for_statement
    (9) statement -> . function_declaration
    (10) statement -> . return_statement
    (11) statement -> . break_statement
    (12) statement -> . continue_statement
    (13) statement -> . block
    (14) expression_statement -> . expression SEMI
    (15) assignment_statement -> . IDENTIFIER EQUALS expression SEMI
    (18) if_statement -> . IF LPAREN expression RPAREN statement
    (19) if_statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (20) while_statement -> . WHILE LPAREN expression RPAREN statement
    (21) for_statement -> . FOR LPAREN assignment_or_empty SEMI expression_or_empty SEMI expression_or_empty RPAREN statement
    (26) function_declaration -> . FUNC IDENTIFIER LPAREN parameter_list RPAREN block
    (27) function_declaration -> . FUNC IDENTIFIER LPAREN RPAREN block
    (30) return_statement -> . RETURN expression SEMI
    (31) return_statement -> . RETURN SEMI
    (32) break_statement -> . BREAK SEMI
    (33) continue_statement -> . CONTINUE SEMI
    (16) block -> . LBRACE statement_list RBRACE
    (17) block -> . LBRACE RBRACE
    (34) expression -> . expression OR expression
    (35) expression -> . expression AND expression
    (36) expression -> . expression EQ expression
    (37) expression -> . expression NE expression
    (38) expression -> . expression LT expression
    (39) expression -> . expression GT expression
    (40) expression -> . expression LE expression
    (41) expression -> . expression GE expression
    (42) expression -> . expression PLUS expression
    (43) expression -> . expression MINUS expression
    (44) expression -> . expression TIMES expression
    (45) expression -> . expression DIVIDE expression
    (46) expression -> . expression MOD expression
    (47) expression -> . NOT expression
    (48) expression -> . MINUS expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . NUMBER
    (51) expression -> . STRING
    (52) expression -> . IDENTIFIER
    (53) expression -> . IDENTIFIER LPAREN argument_list RPAREN
    (54) expression -> . IDENTIFIER LPAREN RPAREN

    IDENTIFIER      shift and go to state 15
    IF              shift and go to state 16
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    FUNC            shift and go to state 20
    RETURN          shift and go to state 21
    BREAK           shift and go to state 22
    CONTINUE        shift and go to state 23
    LBRACE          shift and go to state 24
    NOT             shift and go to state 26
    MINUS           shift and go to state 25
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 27
    STRING          shift and go to state 28

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    expression_statement           shift and go to state 4
    assignment_statement           shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    for_statement                  shift and go to state 8
    function_declaration           shift and go to state 9
    return_statement               shift and go to state 10
    break_statement                shift and go to state 11
    continue_statement             shift and go to state 12
    block                          shift and go to state 13
    expression                     shift and go to state 14

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (4) statement -> . expression_statement
    (5) statement -> . assignment_statement
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . for_statement
    (9) statement -> . function_declaration
    (10) statement -> . return_statement
    (11) statement -> . break_statement
    (12) statement -> . continue_statement
    (13) statement -> . block
    (14) expression_statement -> . expression SEMI
    (15) assignment_statement -> . IDENTIFIER EQUALS expression SEMI
    (18) if_statement -> . IF LPAREN expression RPAREN statement
    (19) if_statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (20) while_statement -> . WHILE LPAREN expression RPAREN statement
    (21) for_statement -> . FOR LPAREN assignment_or_empty SEMI expression_or_empty SEMI expression_or_empty RPAREN statement
    (26) function_declaration -> . FUNC IDENTIFIER LPAREN parameter_list RPAREN block
    (27) function_declaration -> . FUNC IDENTIFIER LPAREN RPAREN block
    (30) return_statement -> . RETURN expression SEMI
    (31) return_statement -> . RETURN SEMI
    (32) break_statement -> . BREAK SEMI
    (33) continue_statement -> . CONTINUE SEMI
    (16) block -> . LBRACE statement_list RBRACE
    (17) block -> . LBRACE RBRACE
    (34) expression -> . expression OR expression
    (35) expression -> . expression AND expression
    (36) expression -> . expression EQ expression
    (37) expression -> . expression NE expression
    (38) expression -> . expression LT expression
    (39) expression -> . expression GT expression
    (40) expression -> . expression LE expression
    (41) expression -> . expression GE expression
    (42) expression -> . expression PLUS expression
    (43) expression -> . expression MINUS expression
    (44) expression -> . expression TIMES expression
    (45) expression -> . expression DIVIDE expression
    (46) expression -> . expression MOD expression
    (47) expression -> . NOT expression
    (48) expression -> . MINUS expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . NUMBER
    (51) expression -> . STRING
    (52) expression -> . IDENTIFIER
    (53) expression -> . IDENTIFIER LPAREN argument_list RPAREN
    (54) expression -> . IDENTIFIER LPAREN RPAREN

    $end            reduce using rule 1 (program -> statement_list .)
    IDENTIFIER      shift and go to state 15
    IF              shift and go to state 16
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    FUNC            shift and go to state 20
    RETURN          shift and go to state 21
    BREAK           shift and go to state 22
    CONTINUE        shift and go to state 23
    LBRACE          shift and go to state 24
    NOT             shift and go to state 26
    MINUS           shift and go to state 25
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 27
    STRING          shift and go to state 28

    statement                      shift and go to state 29
    expression_statement           shift and go to state 4
    assignment_statement           shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    for_statement                  shift and go to state 8
    function_declaration           shift and go to state 9
    return_statement               shift and go to state 10
    break_statement                shift and go to state 11
    continue_statement             shift and go to state 12
    block                          shift and go to state 13
    expression                     shift and go to state 14

state 3

    (3) statement_list -> statement .

    IDENTIFIER      reduce using rule 3 (statement_list -> statement .)
    IF              reduce using rule 3 (statement_list -> statement .)
    WHILE           reduce using rule 3 (statement_list -> statement .)
    FOR             reduce using rule 3 (statement_list -> statement .)
    FUNC            reduce using rule 3 (statement_list -> statement .)
    RETURN          reduce using rule 3 (statement_list -> statement .)
    BREAK           reduce using rule 3 (statement_list -> statement .)
    CONTINUE        reduce using rule 3 (statement_list -> statement .)
    LBRACE          reduce using rule 3 (statement_list -> statement .)
    NOT             reduce using rule 3 (statement_list -> statement .)
    MINUS           reduce using rule 3 (statement_list -> statement .)
    LPAREN          reduce using rule 3 (statement_list -> statement .)
    NUMBER          reduce using rule 3 (statement_list -> statement .)
    STRING          reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement .)


state 4

    (4) statement -> expression_statement .

    IDENTIFIER      reduce using rule 4 (statement -> expression_statement .)
    IF              reduce using rule 4 (statement -> expression_statement .)
    WHILE           reduce using rule 4 (statement -> expression_statement .)
    FOR             reduce using rule 4 (statement -> expression_statement .)
    FUNC            reduce using rule 4 (statement -> expression_statement .)
    RETURN          reduce using rule 4 (statement -> expression_statement .)
    BREAK           reduce using rule 4 (statement -> expression_statement .)
    CONTINUE        reduce using rule 4 (statement -> expression_statement .)
    LBRACE          reduce using rule 4 (statement -> expression_statement .)
    NOT             reduce using rule 4 (statement -> expression_statement .)
    MINUS           reduce using rule 4 (statement -> expression_statement .)
    LPAREN          reduce using rule 4 (statement -> expression_statement .)
    NUMBER          reduce using rule 4 (statement -> expression_statement .)
    STRING          reduce using rule 4 (statement -> expression_statement .)
    $end            reduce using rule 4 (statement -> expression_statement .)
    RBRACE          reduce using rule 4 (statement -> expression_statement .)
    ELSE            reduce using rule 4 (statement -> expression_statement .)


state 5

    (5) statement -> assignment_statement .

    IDENTIFIER      reduce using rule 5 (statement -> assignment_statement .)
    IF              reduce using rule 5 (statement -> assignment_statement .)
    WHILE           reduce using rule 5 (statement -> assignment_statement .)
    FOR             reduce using rule 5 (statement -> assignment_statement .)
    FUNC            reduce using rule 5 (statement -> assignment_statement .)
    RETURN          reduce using rule 5 (statement -> assignment_statement .)
    BREAK           reduce using rule 5 (statement -> assignment_statement .)
    CONTINUE        reduce using rule 5 (statement -> assignment_statement .)
    LBRACE          reduce using rule 5 (statement -> assignment_statement .)
    NOT             reduce using rule 5 (statement -> assignment_statement .)
    MINUS           reduce using rule 5 (statement -> assignment_statement .)
    LPAREN          reduce using rule 5 (statement -> assignment_statement .)
    NUMBER          reduce using rule 5 (statement -> assignment_statement .)
    STRING          reduce using rule 5 (statement -> assignment_statement .)
    $end            reduce using rule 5 (statement -> assignment_statement .)
    RBRACE          reduce using rule 5 (statement -> assignment_statement .)
    ELSE            reduce using rule 5 (statement -> assignment_statement .)


state 6

    (6) statement -> if_statement .

    IDENTIFIER      reduce using rule 6 (statement -> if_statement .)
    IF              reduce using rule 6 (statement -> if_statement .)
    WHILE           reduce using rule 6 (statement -> if_statement .)
    FOR             reduce using rule 6 (statement -> if_statement .)
    FUNC            reduce using rule 6 (statement -> if_statement .)
    RETURN          reduce using rule 6 (statement -> if_statement .)
    BREAK           reduce using rule 6 (statement -> if_statement .)
    CONTINUE        reduce using rule 6 (statement -> if_statement .)
    LBRACE          reduce using rule 6 (statement -> if_statement .)
    NOT             reduce using rule 6 (statement -> if_statement .)
    MINUS           reduce using rule 6 (statement -> if_statement .)
    LPAREN          reduce using rule 6 (statement -> if_statement .)
    NUMBER          reduce using rule 6 (statement -> if_statement .)
    STRING          reduce using rule 6 (statement -> if_statement .)
    $end            reduce using rule 6 (statement -> if_statement .)
    RBRACE          reduce using rule 6 (statement -> if_statement .)
    ELSE            reduce using rule 6 (statement -> if_statement .)


state 7

    (7) statement -> while_statement .

    IDENTIFIER      reduce using rule 7 (statement -> while_statement .)
    IF              reduce using rule 7 (statement -> while_statement .)
    WHILE           reduce using rule 7 (statement -> while_statement .)
    FOR             reduce using rule 7 (statement -> while_statement .)
    FUNC            reduce using rule 7 (statement -> while_statement .)
    RETURN          reduce using rule 7 (statement -> while_statement .)
    BREAK           reduce using rule 7 (statement -> while_statement .)
    CONTINUE        reduce using rule 7 (statement -> while_statement .)
    LBRACE          reduce using rule 7 (statement -> while_statement .)
    NOT             reduce using rule 7 (statement -> while_statement .)
    MINUS           reduce using rule 7 (statement -> while_statement .)
    LPAREN          reduce using rule 7 (statement -> while_statement .)
    NUMBER          reduce using rule 7 (statement -> while_statement .)
    STRING          reduce using rule 7 (statement -> while_statement .)
    $end            reduce using rule 7 (statement -> while_statement .)
    RBRACE          reduce using rule 7 (statement -> while_statement .)
    ELSE            reduce using rule 7 (statement -> while_statement .)


state 8

    (8) statement -> for_statement .

    IDENTIFIER      reduce using rule 8 (statement -> for_statement .)
    IF              reduce using rule 8 (statement -> for_statement .)
    WHILE           reduce using rule 8 (statement -> for_statement .)
    FOR             reduce using rule 8 (statement -> for_statement .)
    FUNC            reduce using rule 8 (statement -> for_statement .)
    RETURN          reduce using rule 8 (statement -> for_statement .)
    BREAK           reduce using rule 8 (statement -> for_statement .)
    CONTINUE        reduce using rule 8 (statement -> for_statement .)
    LBRACE          reduce using rule 8 (statement -> for_statement .)
    NOT             reduce using rule 8 (statement -> for_statement .)
    MINUS           reduce using rule 8 (statement -> for_statement .)
    LPAREN          reduce using rule 8 (statement -> for_statement .)
    NUMBER          reduce using rule 8 (statement -> for_statement .)
    STRING          reduce using rule 8 (statement -> for_statement .)
    $end            reduce using rule 8 (statement -> for_statement .)
    RBRACE          reduce using rule 8 (statement -> for_statement .)
    ELSE            reduce using rule 8 (statement -> for_statement .)


state 9

    (9) statement -> function_declaration .

    IDENTIFIER      reduce using rule 9 (statement -> function_declaration .)
    IF              reduce using rule 9 (statement -> function_declaration .)
    WHILE           reduce using rule 9 (statement -> function_declaration .)
    FOR             reduce using rule 9 (statement -> function_declaration .)
    FUNC            reduce using rule 9 (statement -> function_declaration .)
    RETURN          reduce using rule 9 (statement -> function_declaration .)
    BREAK           reduce using rule 9 (statement -> function_declaration .)
    CONTINUE        reduce using rule 9 (statement -> function_declaration .)
    LBRACE          reduce using rule 9 (statement -> function_declaration .)
    NOT             reduce using rule 9 (statement -> function_declaration .)
    MINUS           reduce using rule 9 (statement -> function_declaration .)
    LPAREN          reduce using rule 9 (statement -> function_declaration .)
    NUMBER          reduce using rule 9 (statement -> function_declaration .)
    STRING          reduce using rule 9 (statement -> function_declaration .)
    $end            reduce using rule 9 (statement -> function_declaration .)
    RBRACE          reduce using rule 9 (statement -> function_declaration .)
    ELSE            reduce using rule 9 (statement -> function_declaration .)


state 10

    (10) statement -> return_statement .

    IDENTIFIER      reduce using rule 10 (statement -> return_statement .)
    IF              reduce using rule 10 (statement -> return_statement .)
    WHILE           reduce using rule 10 (statement -> return_statement .)
    FOR             reduce using rule 10 (statement -> return_statement .)
    FUNC            reduce using rule 10 (statement -> return_statement .)
    RETURN          reduce using rule 10 (statement -> return_statement .)
    BREAK           reduce using rule 10 (statement -> return_statement .)
    CONTINUE        reduce using rule 10 (statement -> return_statement .)
    LBRACE          reduce using rule 10 (statement -> return_statement .)
    NOT             reduce using rule 10 (statement -> return_statement .)
    MINUS           reduce using rule 10 (statement -> return_statement .)
    LPAREN          reduce using rule 10 (statement -> return_statement .)
    NUMBER          reduce using rule 10 (statement -> return_statement .)
    STRING          reduce using rule 10 (statement -> return_statement .)
    $end            reduce using rule 10 (statement -> return_statement .)
    RBRACE          reduce using rule 10 (statement -> return_statement .)
    ELSE            reduce using rule 10 (statement -> return_statement .)


state 11

    (11) statement -> break_statement .

    IDENTIFIER      reduce using rule 11 (statement -> break_statement .)
    IF              reduce using rule 11 (statement -> break_statement .)
    WHILE           reduce using rule 11 (statement -> break_statement .)
    FOR             reduce using rule 11 (statement -> break_statement .)
    FUNC            reduce using rule 11 (statement -> break_statement .)
    RETURN          reduce using rule 11 (statement -> break_statement .)
    BREAK           reduce using rule 11 (statement -> break_statement .)
    CONTINUE        reduce using rule 11 (statement -> break_statement .)
    LBRACE          reduce using rule 11 (statement -> break_statement .)
    NOT             reduce using rule 11 (statement -> break_statement .)
    MINUS           reduce using rule 11 (statement -> break_statement .)
    LPAREN          reduce using rule 11 (statement -> break_statement .)
    NUMBER          reduce using rule 11 (statement -> break_statement .)
    STRING          reduce using rule 11 (statement -> break_statement .)
    $end            reduce using rule 11 (statement -> break_statement .)
    RBRACE          reduce using rule 11 (statement -> break_statement .)
    ELSE            reduce using rule 11 (statement -> break_statement .)


state 12

    (12) statement -> continue_statement .

    IDENTIFIER      reduce using rule 12 (statement -> continue_statement .)
    IF              reduce using rule 12 (statement -> continue_statement .)
    WHILE           reduce using rule 12 (statement -> continue_statement .)
    FOR             reduce using rule 12 (statement -> continue_statement .)
    FUNC            reduce using rule 12 (statement -> continue_statement .)
    RETURN          reduce using rule 12 (statement -> continue_statement .)
    BREAK           reduce using rule 12 (statement -> continue_statement .)
    CONTINUE        reduce using rule 12 (statement -> continue_statement .)
    LBRACE          reduce using rule 12 (statement -> continue_statement .)
    NOT             reduce using rule 12 (statement -> continue_statement .)
    MINUS           reduce using rule 12 (statement -> continue_statement .)
    LPAREN          reduce using rule 12 (statement -> continue_statement .)
    NUMBER          reduce using rule 12 (statement -> continue_statement .)
    STRING          reduce using rule 12 (statement -> continue_statement .)
    $end            reduce using rule 12 (statement -> continue_statement .)
    RBRACE          reduce using rule 12 (statement -> continue_statement .)
    ELSE            reduce using rule 12 (statement -> continue_statement .)


state 13

    (13) statement -> block .

    IDENTIFIER      reduce using rule 13 (statement -> block .)
    IF              reduce using rule 13 (statement -> block .)
    WHILE           reduce using rule 13 (statement -> block .)
    FOR             reduce using rule 13 (statement -> block .)
    FUNC            reduce using rule 13 (statement -> block .)
    RETURN          reduce using rule 13 (statement -> block .)
    BREAK           reduce using rule 13 (statement -> block .)
    CONTINUE        reduce using rule 13 (statement -> block .)
    LBRACE          reduce using rule 13 (statement -> block .)
    NOT             reduce using rule 13 (statement -> block .)
    MINUS           reduce using rule 13 (statement -> block .)
    LPAREN          reduce using rule 13 (statement -> block .)
    NUMBER          reduce using rule 13 (statement -> block .)
    STRING          reduce using rule 13 (statement -> block .)
    $end            reduce using rule 13 (statement -> block .)
    RBRACE          reduce using rule 13 (statement -> block .)
    ELSE            reduce using rule 13 (statement -> block .)


state 14

    (14) expression_statement -> expression . SEMI
    (34) expression -> expression . OR expression
    (35) expression -> expression . AND expression
    (36) expression -> expression . EQ expression
    (37) expression -> expression . NE expression
    (38) expression -> expression . LT expression
    (39) expression -> expression . GT expression
    (40) expression -> expression . LE expression
    (41) expression -> expression . GE expression
    (42) expression -> expression . PLUS expression
    (43) expression -> expression . MINUS expression
    (44) expression -> expression . TIMES expression
    (45) expression -> expression . DIVIDE expression
    (46) expression -> expression . MOD expression

    SEMI            shift and go to state 30
    OR              shift and go to state 31
    AND             shift and go to state 32
    EQ              shift and go to state 33
    NE              shift and go to state 34
    LT              shift and go to state 35
    GT              shift and go to state 36
    LE              shift and go to state 37
    GE              shift and go to state 38
    PLUS            shift and go to state 39
    MINUS           shift and go to state 40
    TIMES           shift and go to state 41
    DIVIDE          shift and go to state 42
    MOD             shift and go to state 43


state 15

    (15) assignment_statement -> IDENTIFIER . EQUALS expression SEMI
    (52) expression -> IDENTIFIER .
    (53) expression -> IDENTIFIER . LPAREN argument_list RPAREN
    (54) expression -> IDENTIFIER . LPAREN RPAREN

    EQUALS          shift and go to state 44
    SEMI            reduce using rule 52 (expression -> IDENTIFIER .)
    OR              reduce using rule 52 (expression -> IDENTIFIER .)
    AND             reduce using rule 52 (expression -> IDENTIFIER .)
    EQ              reduce using rule 52 (expression -> IDENTIFIER .)
    NE              reduce using rule 52 (expression -> IDENTIFIER .)
    LT              reduce using rule 52 (expression -> IDENTIFIER .)
    GT              reduce using rule 52 (expression -> IDENTIFIER .)
    LE              reduce using rule 52 (expression -> IDENTIFIER .)
    GE              reduce using rule 52 (expression -> IDENTIFIER .)
    PLUS            reduce using rule 52 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 52 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 52 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 52 (expression -> IDENTIFIER .)
    MOD             reduce using rule 52 (expression -> IDENTIFIER .)
    LPAREN          shift and go to state 45


state 16

    (18) if_statement -> IF . LPAREN expression RPAREN statement
    (19) if_statement -> IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN          shift and go to state 46


state 17

    (49) expression -> LPAREN . expression RPAREN
    (34) expression -> . expression OR expression
    (35) expression -> . expression AND expression
    (36) expression -> . expression EQ expression
    (37) expression -> . expression NE expression
    (38) expression -> . expression LT expression
    (39) expression -> . expression GT expression
    (40) expression -> . expression LE expression
    (41) expression -> . expression GE expression
    (42) expression -> . expression PLUS expression
    (43) expression -> . expression MINUS expression
    (44) expression -> . expression TIMES expression
    (45) expression -> . expression DIVIDE expression
    (46) expression -> . expression MOD expression
    (47) expression -> . NOT expression
    (48) expression -> . MINUS expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . NUMBER
    (51) expression -> . STRING
    (52) expression -> . IDENTIFIER
    (53) expression -> . IDENTIFIER LPAREN argument_list RPAREN
    (54) expression -> . IDENTIFIER LPAREN RPAREN

    NOT             shift and go to state 26
    MINUS           shift and go to state 25
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 27
    STRING          shift and go to state 28
    IDENTIFIER      shift and go to state 48

    expression                     shift and go to state 47
